--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=comercio
+
+# Configuraci?n de la base de datos
+spring.datasource.url= jdbc:mysql://localhost:3306/commerce
+spring.datasource.username= root
+spring.datasource.password=admin1234
+
+# Configuraci?n de Hibernate
+spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql= true
+
+#Configuración de Security
+spring.security.user.name = juancho
+spring.security.user.password= 1234
